mini_project_index.html

--- a/mini_project/index.html
+++ b/mini_project/index.html
@@ -5,13 +5,20 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-<!--  <link rel="prerender" href="usersPage/usersPage.html">-->
-<!--  <link rel="stylesheet" href="usersPage/normalize.css">-->
-<!--  <link rel="stylesheet" href="usersPage/usersPage.css">-->
-<!--  <link rel="stylesheet" href="usersPage/usersMedia.css">-->
+    <title>Welcome</title>
+    <link rel="stylesheet" href="usersPage/normalize.css"/>
+    <style>
+        .main{
+            background-image: url("backgroundPictures/3214373.jpg");
+            background-size: cover;
+            height: 100vh;
+            width: 100vw;
+        }
+    </style>
 </head>
 <body>
-<button><a href="usersPage/usersPage.html">button</a></button>
+<a href="usersPage/usersPage.html">
+    <div class="main"></div>
+</a>
 </body>
 </html>
