--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome</title>
-    <link rel="stylesheet" href="usersPage/normalize.css"/>
+    <link rel="stylesheet" href="mini_project/usersPage/normalize.css"/>
     <style>
         .main{
-            background-image: url("backgroundPictures/3214373.jpg");
+            background-image: url("mini_project/backgroundPictures/3214373.jpg");
             background-size: cover;
             background-position: center;
             height: 100vh;
@@ -17,7 +17,7 @@
         }
         @media screen and (max-width: 500px){
             .main {
-                background-image: url("backgroundPictures/9c4d79bf32f9bad0ed044349306e6962.jpg");
+                background-image: url("mini_project/backgroundPictures/9c4d79bf32f9bad0ed044349306e6962.jpg");
                 background-size: cover;
                 background-position: center;
             }
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body>
-<a href="usersPage/usersPage.html">
+<a href="mini_project/usersPage/usersPage.html">
     <div class="main"></div>
 </a>
 </body>
